--- a/leanchatlib/build.gradle
+++ b/leanchatlib/build.gradle
@@ -27,8 +27,6 @@ android {
 //jar 包请见 ./libs，不是 ./leanchatlib/libs。转 Eclipse 的项目格式的时候可能用到。
 dependencies {
 
-    compile 'com.android.support:support-v4:21.0.3'
-
     compile 'cn.leancloud.android:avoscloud-sdk:v3.7.4'
     compile 'cn.leancloud.android:avoscloud-push:v3.7.4@aar'
 
@@ -39,6 +37,10 @@ dependencies {
     compile 'org.apache.httpcomponents:httpmime:4.2.4'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.github.stuxuhai:jpinyin:1.0'
 
     //compile fileTree(dir: 'libs', include: ['*.jar'])
 }
