--- a/leanchatlib-demo/build.gradle
+++ b/leanchatlib-demo/build.gradle
@@ -30,5 +30,6 @@ android {
 
 dependencies {
     compile project(':leanchatlib')
+    compile 'com.android.support:design:22.2.0'
     compile 'com.jakewharton:butterknife:6.1.0'
 }
