--- a/leanchatlib/src/main/AndroidManifest.xml
+++ b/leanchatlib/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
         android:allowBackup="true"
         android:label="@string/app_name">
 
+        <activity android:name=".activity.AVChatActivity"/>
+
     </application>
 
 </manifest>
