--- a/leanchatlib/build.gradle
+++ b/leanchatlib/build.gradle
@@ -27,12 +27,11 @@ android {
 //jar 包请见 ./libs，不是 ./leanchatlib/libs。转 Eclipse 的项目格式的时候可能用到。
 dependencies {
 
-    compile 'cn.leancloud.android:avoscloud-sdk:v3.11'
-    compile 'cn.leancloud.android:avoscloud-push:v3.11@aar'
+    compile 'cn.leancloud.android:avoscloud-sdk:v3.+'
+    compile 'cn.leancloud.android:avoscloud-push:v3.+@aar'
+    compile 'cn.leancloud.android:Java-WebSocket:1.3.1-leancloud'
 
     compile files('libs/prettytime-3.2.5.Final.jar')
-    compile 'cn.leancloud.android:Java-WebSocket:1.2.0-leancloud'
-    compile 'com.loopj.android:android-async-http:1.4.6'
     compile 'cn.leancloud.android:fastjson:1.1.37-leancloud'
     compile 'org.apache.httpcomponents:httpmime:4.2.4'
     compile 'de.greenrobot:eventbus:2.4.0'
