--- a/leanchatlib/build.gradle
+++ b/leanchatlib/build.gradle
@@ -26,13 +26,10 @@ android {
 
 //jar 包请见 ./libs，不是 ./leanchatlib/libs。转 Eclipse 的项目格式的时候可能用到。
 dependencies {
-
     compile 'cn.leancloud.android:avoscloud-sdk:v3.+'
-    compile 'cn.leancloud.android:avoscloud-push:v3.+@aar'
-    compile 'cn.leancloud.android:Java-WebSocket:1.3.1-leancloud'
+    compile ('cn.leancloud.android:avoscloud-push:v3.+@aar'){transitive = true}
 
     compile files('libs/prettytime-3.2.5.Final.jar')
-    compile 'cn.leancloud.android:fastjson:1.1.37-leancloud'
     compile 'org.apache.httpcomponents:httpmime:4.2.4'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -40,6 +37,4 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.github.stuxuhai:jpinyin:1.0'
-
-    //compile fileTree(dir: 'libs', include: ['*.jar'])
 }
