--- a/leanchatlib/build.gradle
+++ b/leanchatlib/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.github.stuxuhai:jpinyin:1.0'
+    compile project(':bQMM_Lib')
 }
