sdk版本升级为1.4.0  表情联想功能使用新方法。

--- a/bQMM_Lib/src/main/AndroidManifest.xml
+++ b/bQMM_Lib/src/main/AndroidManifest.xml
@@ -40,5 +40,8 @@
         <activity
             android:name="com.melink.bqmmsdk.ui.store.ServiceDeclaration"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="com.melink.bqmmsdk.ui.store.EmojiPackageSort"
+            android:screenOrientation="portrait"></activity>
     </application>
 </manifest>
