--- a/leanchat/build.gradle
+++ b/leanchat/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'cn.leancloud.android:avoscloud-statistics:v3.4.5@aar'
     compile files('libs/baidumapapi_v3_0_0.jar')
     compile files('libs/locSDK_4.2.jar')
+    compile 'com.tencent.bugly:crashreport:latest.release'
 }
